--- a/index.html
+++ b/index.html
@@ -325,17 +325,26 @@
 
     <div class="mission-section" style="text-align: center;">
         <h2 style=" animation: slideIn 2s ease-in-out forwards; font-size: 60px; margin-bottom: -10px; margin-top: 20px">Why Computer Science?</h2>
-        <hr style="width: 400px; color:blue; height:5px; background-color: blue; animation: slideIn 2s ease-in-out forwards; margin-bottom: 30px" size = "40px">
+        <hr style="width: 750px; color:blue; height:5px; background-color: blue; animation: slideIn 2s ease-in-out forwards; margin-bottom: 30px" size = "40px">
         <div class="row">
             <div class="column">
-              <img src="boys_and_girls_club.png" alt="Snow" style="width:100%; border-radius: 450000px">
-              <margin-left:20px></margin-left:4px>
+              <img src="coding.png" alt="Snow" style="width:85%; border-radius: 450000px">
+              <margin-left:18px>
+              <h1 style="font-size: 30px">Project-Building</h1>
+              <hr style="width: 250px; color:blackblue; height:1px; background-color: black; animation: slideIn 2s ease-in-out forwards; margin-bottom: 30px; margin-top: -5px" size = "10px">
+              <p style="margin-top: -10px; margin-left: 10px; margin-right: 10px;">Through our program, students will not only learn how to use and manipulate various computer science and coding ideas, but will eventually apply such concepts in the forrm of projects. Not only do these prorjects demonstrate the student's growth, but also demonstrates management skills needed to maintain a larger project. </p>
             </div>
             <div class="column">
-              <img src="boys_and_girls_club.png" alt="Forest" style="width:100%;border-radius: 450000px">
+              <img src="invaluableskills.png" alt="Forest" style="width:85%;border-radius: 450000px">
+              <h1 style="font-size: 30px">Invaluable Skills</h1>
+              <hr style="width: 250px; color:blackblue; height:1px; background-color: black; animation: slideIn 2s ease-in-out forwards; margin-bottom: 30px; margin-top: -5px" size = "10px">
+              <p style="margin-top: -10px; margin-left: 10px; margin-right: 10px;">In    today's world, computer science, and the skills that pursuing it's education provides, have become invaluable and priceless. Not only do countless jobs and opportunities exist for students and adults alike in the world of computer science, but for many, it is a hobby. Through this program, we encourage students to think in this same mindset. </p>
             </div>
             <div class="column">
-              <img src="boys_and_girls_club.png" alt="Mountains" style="width:100%; border-radius: 450000px">
+              <img src="creativity.png" alt="Mountains" style="width:85%; border-radius: 450000px;">
+              <h1 style="font-size: 30px">Fostering Creativity</h1>
+              <hr style="width: 250px; color:blackblue; height:1px; background-color: black; animation: slideIn 2s ease-in-out forwards; margin-bottom: 30px; margin-top: -5px" size = "10px">
+              <p style="margin-top: -10px; margin-left: 10px; margin-right: 10px;">Due to the vastness of both computer science theory, and coding itself, platforms and languages such as Java, Python and C++ offer boundless creativity, allowing students to create whatever their heart desire. These classes will teach students how to harness their creative energy to prorduce programs that they will be proud of, and have fun along the way. </p>
             </div>
           </div>
     </div>
@@ -356,8 +365,8 @@
         </header>
  
     <div class="services-section" style="text-align: center;">
-        <h2 style=" animation: slideIn 2s ease-in-out forwards; font-size: 60px; margin-bottom: -20px">Our Services</h2>
-        <hr style="width: 500px; color:orange; height:5px; background-color: orange; margin-bottom: 40px" size = "40px">
+        <h2 style=" animation: slideIn 2s ease-in-out forwards; font-size: 60px; margin-bottom: -20px; margin-top: -20px">Our Services</h2>
+        <hr style="width: 400px; color:orange; height:5px; background-color: orange; margin-bottom: 40px" size = "40px">
         <div class="card m-2 col-lg p-0 " style="width: 18rem"></div>
         <img
         alt="Runbier teaching kids to code"
